# DiffPES

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Matlab/: TotalProjection.m
Matlab/Functions/: ARPES_simulation_Advanced.m  ARPES_simulation_Basic.m  ARPES_simulation_Basicplus.m  ARPES_simulation_Expert.m  ARPES_simulation_Novice.m  import_doscar.m  import_eigenval.m  import_kpoints.m  import_poscar.m  import_procar.m
src/arpyes/: __init__.py
src/arpyes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/arpyes/inout/: __init__.py  chgcar.py  doscar.py  eigenval.py  hdf5.py  helpers.py  kpoints.py  plotting.py  poscar.py  procar.py
src/arpyes/io/: __init__.py  eigenval.py  kpoints.py  procar.py
src/arpyes/maths/: __init__.py  dipole.py  gaunt.py  spherical_harmonics.py
src/arpyes/matrix_elements/: dipole.py  spherical_harmonics.py
src/arpyes/radial/: __init__.py  bessel.py  integrate.py  wavefunctions.py
src/arpyes/simul/: __init__.py  broadening.py  crosssections.py  expanded.py  forward.py  oam.py  polarization.py  resolution.py  self_energy.py  spectrum.py  workflow.py
src/arpyes/simulate/: broadening.py  oam.py  polarization.py  spectrum.py
src/arpyes/tb/: __init__.py  diagonalize.py  hamiltonian.py
src/arpyes/tightb/: __init__.py  diagonalize.py  hamiltonian.py  projections.py
src/arpyes/types/: __init__.py  aliases.py  bands.py  dos.py  geometry.py  kpath.py  params.py  radial_params.py  self_energy.py  tb_model.py  volumetric.py
src/arpyes/utils/: __init__.py  math.py
src/diffpes/: __init__.py
src/diffpes/inout/: __init__.py  chgcar.py  doscar.py  eigenval.py  hdf5.py  helpers.py  kpoints.py  plotting.py  poscar.py  procar.py
src/diffpes/maths/: dipole.py  gaunt.py  spherical_harmonics.py
src/diffpes/radial/: __init__.py  bessel.py  wavefunctions.py
src/diffpes/simul/: broadening.py  crosssections.py  expanded.py  forward.py  oam.py  polarization.py  resolution.py  self_energy.py  spectrum.py  workflow.py
src/diffpes/tightb/: __init__.py  diagonalize.py  hamiltonian.py  projections.py
src/diffpes/types/: __init__.py  aliases.py  bands.py  dos.py  geometry.py  kpath.py  params.py  radial_params.py  self_energy.py  tb_model.py  volumetric.py
tests/test_arpyes/test_inout/: test_hdf5.py  test_helpers.py  test_plotting.py  test_vasp_readers.py
tests/test_arpyes/test_maths/: test_dipole.py  test_gaunt.py  test_spherical_harmonics.py
tests/test_arpyes/test_matrix_elements/: test_dipole.py  test_spherical_harmonics.py
tests/test_arpyes/test_radial/: __init__.py  test_bessel.py  test_integrate.py  test_wavefunctions.py
tests/test_arpyes/test_simul/: test_broadening.py  test_oam.py  (+9 more)
(+58 files in other folders)
